@@ -1,3 +1,7 @@
+2002-07-10  Jeff Freedman  <jsf@usf-cf-x86-linux-1>
+
+	* gamewin.cc,etc:  Cleanup:  NPC list in Chunks has been removed.
+
 2002-07-10  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* exult.cc: undo double click change. (it broke gumps)
 
